OP-146: Migrate js functionality from Streamly app to Widget
* Implement workflow of call functionality
* Add test page - which holds a button and an iframe. It can be accessed on path: /test

--- a/app/views/clientScreen.ejs
+++ b/app/views/clientScreen.ejs
@@ -8,14 +8,12 @@
     <title>title</title>
   </head>
   <body>
-  	<button class="integration__button vertical-right integration__button--vertical" >Contact store</button>
-<div class="integration__overlay hidden">
-</div>
-<div class="integration__video-container hidden">
-    <iframe id="clientScreen__iframe" src="http://localhost:8080/" allowfullscreen height="315" width="560" allowfullscreen="" frameborder="0">
+  	<button class="integration__button vertical-right integration__button--vertical js-call">Contact store</button>
+    <div class="integration__overlay hidden"></div>
+    <div class="integration__video-container hidden">
+      <iframe id="clientScreen__iframe" src="http://localhost:8080/" allowfullscreen height="315" width="560" allowfullscreen="" frameborder="0">
       <p>Your browser does not support iframes.</p>
-    </iframe>
-</div>
-
+      </iframe>
+    </div>
   </body>
 </html>
