--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <title>Streamly widget</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/clientScreen.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://use.fontawesome.com/bfc751953e.js"></script>
-    <script src="/js/main.js"></script>
   </head>
   <body>
-  <div class="videoContainer__body display">
-    <div class="flex gutterHLg">
-      <div class="videoContainer" id="videoContainer">
-        <div id="remoteContainer">
-            <div class="callingScreen ">
+      <div class="videoContainer__body display">
+        <div class="flex gutterHLg">
+          <div class="videoContainer" id="videoContainer">
+            <div id="remoteContainer">
+              <div class="callingScreen ">
                 <div class="callingScreen__name">ob.remotePeerName </div>
                 <div class="callingScreen__image" style="ob.avatarURL"></div>
-            </div>
+              </div>
             <div class="loadingScreen hide">
                 <div class="loadingScreen__container">
                     <div>
@@ -26,26 +26,38 @@
                 </div>
 
             </div>
-        </div>
-        <div  id="localVideoContainer" class="display">
-          <video id="localVideo"></video>
-        </div>
-        <div class="btnContainer display">
-          <div class="btnContainer__overlay"></div>
-          <button title="Mute" class="btn clrP clrBr btn-default clrSh2 js-mute "><i class="fa fa-microphone" aria-hidden="true"></i></button>
-          <button title="Pause video" class="btn clrP clrBr btn-default clrSh2 js-pause"><i class="fa fa-video-camera" aria-hidden="true"></i></i></button>
-          <button title="Fullscreen" class="btn clrP clrBr btn-default clrSh2 js-fullScreen"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
-          <button title="End video" class="btn clrP clrBr btn-default red clrSh2 js-end"><i class="fa fa-phone end-call" aria-hidden="true"></i></button>
-        </div>
-        <div class="btnContainer top display">
+          </div>
+          <div  id="localVideoContainer" class="display">
+            <video id="localVideo"></video>
+          </div>
+          <div class="btnContainer display">
+            <div class="btnContainer__overlay"></div>
+            <button title="Mute" class="btn clrP clrBr btn-default clrSh2 js-mute "><i class="fa fa-microphone" aria-hidden="true"></i></button>
+            <button title="Pause video" class="btn clrP clrBr btn-default clrSh2 js-pause"><i class="fa fa-video-camera" aria-hidden="true"></i></i></button>
+            <button title="Fullscreen" class="btn clrP clrBr btn-default clrSh2 js-fullScreen"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
+            <button title="End video" class="btn clrP clrBr btn-default red clrSh2 js-end"><i class="fa fa-phone end-call" aria-hidden="true"></i></button>
+          </div>
+          <div class="btnContainer top display">
             <div class="callingString hide">Calling</div>
             <div class="nickname text-ellipsis" title="">remotePeerName</div>
             <div class="durationDisplay__text"><span class="durationDisplay__number">00:00</span></div>
             <div class="btnContainer__overlay"></div>
             <div class="centPerMinute__container">$<span class="centPerMinute__value">0.00</span>cent/sec</div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+    <script>
+      config = {};
+      config.signallingServer = '<%= config.webrtc.signallingServer%>';
+      config.callTimerDelay = '<%= config.webrtc.callTimerDelay%>';
+      config.widgetId = '<%= config.id%>';
+      config.context = '<%= config.context%>';
+      config.remotePeerId = '<%= config.remotePeerId%>';
+    </script>
+    <script src='/js/libs/simplewebrtc-with-adapter.bundle.js'></script>
+    <script src="/js/videoEvents.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
