--- a/app/views/clientScreen.ejs
+++ b/app/views/clientScreen.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="stylesheets/clientScreen.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="js/clientScreen.js"></script>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Client Screen</title>
   </head>
   <body>
-  	<button class="integration__button vertical-right integration__button--vertical js-call">Contact store</button>
-    <div class="integration__overlay hidden"></div>
-    <div class="integration__video-container hidden">
-      <iframe id="clientScreen__iframe" src="http://localhost:8080/" allowfullscreen height="315" width="560" allowfullscreen="" frameborder="0">
-      <p>Your browser does not support iframes.</p>
-      </iframe>
-    </div>
+    <button class="streamlyBtn" data-store-name="Streamly provider" data-listing-name="Test Listing" data-peer-id="QmQ4MM8shZteAgmGm8JG1h2eJw746VCNmaTnMzu3vkrTWS">Contact store</button>
+    <script>
+        // Load Streamly Widget
+        (function() {
+            var tag = document.createElement('script');
+            tag.src = "http://localhost:8080/streamly/api/clientScreen.js";
+            var firstScriptTag = document.getElementsByTagName('script')[0];
+            firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+        })();
+    </script>
   </body>
 </html>
