OP-146: Show name of remote peer on video modal

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,7 +14,7 @@
           <div class="videoContainer" id="videoContainer">
             <div id="remoteContainer">
               <div class="callingScreen ">
-                <div class="callingScreen__name">ob.remotePeerName </div>
+                <div class="callingScreen__name"></div>
                 <div class="callingScreen__image" style="ob.avatarURL"></div>
               </div>
             <div class="loadingScreen hide">
@@ -39,7 +39,7 @@
           </div>
           <div class="btnContainer top display">
             <div class="callingString hide">Calling</div>
-            <div class="nickname text-ellipsis" title="">remotePeerName</div>
+            <div class="nickname text-ellipsis" title=""></div>
             <div class="durationDisplay__text"><span class="durationDisplay__number">00:00</span></div>
             <div class="btnContainer__overlay"></div>
             <div class="centPerMinute__container">$<span class="centPerMinute__value">0.00</span>cent/sec</div>
