--- a/app/public/stylesheets/clientScreen.css
+++ b/app/public/stylesheets/clientScreen.css
@@ -2,7 +2,7 @@
     position: relative;
     padding-bottom: 480px;
     margin: 55px auto 0 auto;
-    width: 50vw;
+    width: 640px;
     height: 0;
     overflow: hidden;
     border: 1px solid #dbdbdb;
