--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -32,10 +32,13 @@
           </div>
           <div class="btnContainer display">
             <div class="btnContainer__overlay"></div>
-            <button title="Mute" class="btn clrP clrBr btn-default clrSh2 js-mute "><i class="fa fa-microphone" aria-hidden="true"></i></button>
-            <button title="Pause video" class="btn clrP clrBr btn-default clrSh2 js-pause"><i class="fa fa-video-camera" aria-hidden="true"></i></i></button>
-            <button title="Fullscreen" class="btn clrP clrBr btn-default clrSh2 js-fullScreen"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
-            <button title="End video" class="btn clrP clrBr btn-default red clrSh2 js-end"><i class="fa fa-phone end-call" aria-hidden="true"></i></button>
+            <div class="btnContainer__video">
+                <button title="Mute" class="btn clrP clrBr btn-default clrSh2 js-mute "><i class="fa fa-microphone" aria-hidden="true"></i></button>
+                <button title="End video" class="btn clrP clrBr btn-default red clrSh2 js-end"><i class="fa fa-phone end-call" aria-hidden="true"></i></button>
+                <button title="Pause video" class="btn clrP clrBr btn-default clrSh2 js-pause"><i class="fa fa-video-camera" aria-hidden="true"></i></i></button>
+                <button title="Fullscreen" class="btn clrP clrBr btn-default clrSh2 js-fullScreen"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
+            </div>
+            <button title="Mute" class="btn clrP clrBr btn-default clrSh2 openchatbtn js-openchat"><i class="fa fa-comments" aria-hidden="true"></i></button>
           </div>
           <div class="btnContainer top display">
             <div class="callingString hide">Calling</div>
@@ -44,6 +47,24 @@
             <div class="btnContainer__overlay"></div>
             <div class="centPerMinute__container">$<span class="centPerMinute__value">0.00</span>cent/sec</div>
           </div>
+        </div>
+        <div class="chatContainer">
+            <img class="chatLogo" src="../imgs/streamlyVectorIconNoText.png" >
+            <div class="chatBar">
+
+              <div class="chatBubble theirs">
+                  <div class="caption">Store Admin</div>
+                  <span class="text">Haven't been better! How about you?</span>
+                  <div class="time">1:44 PM</div>
+              </div>
+              <div class="chatBubble mine">
+                  <div class="caption">You</div>
+                  <span class="text">How are you dude?</span>
+                  <div class="time">1:44 PM</div>
+              </div>
+          </div>
+          <input class="chatInput" placeholder="Type a message..." type="text">
+
         </div>
       </div>
     </div>
