OP-150: Adding varibale for widget store name + refactoring

--- a/app/views/clientScreen.ejs
+++ b/app/views/clientScreen.ejs
@@ -5,7 +5,7 @@
     <title>Client Screen</title>
   </head>
   <body>
-    <button class="streamlyBtn" data-store-name="Streamly provider" data-listing-name="Test Listing" data-peer-id="Qmdi2eVodWwXLCFqtmDjVdn4YJgZeoMnAMXuM3hj4ZDp9n">Contact store</button>
+    <button class="streamlyBtn" data-widget-store-name="Streamly provider" data-remote-store-name="Milko's store" data-listing-name="Test Listing" data-peer-id="QmQ4MM8shZteAgmGm8JG1h2eJw746VCNmaTnMzu3vkrTWS">Contact store</button>
     <script>
         // Load Streamly Widget
         (function() {
