--- a/app/views/generator.ejs
+++ b/app/views/generator.ejs
@@ -10,7 +10,8 @@
     <div class="generatorContainer">
         <div>
             <div id="buttonInfo">
-              Store name: <input type="text" name="store" id="store"><br>
+              Your store name: <input type="text" name="widgetStore" id="widgetStore"><br>
+              Remote store name: <input type="text" name="remoteStore" id="remoteStore"><br>
               Listing name: <input type="text" name="listing" id="listing"><br>
               Store peer id: <input type="text" name="peerId" id="peerID"><br>
               <button class="js-generate">Get code</button>
