--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -38,7 +38,7 @@
                 <button title="Pause video" class="btn clrP clrBr btn-default clrSh2 js-pause"><i class="fa fa-video-camera" aria-hidden="true"></i></i></button>
                 <button title="Fullscreen" class="btn clrP clrBr btn-default clrSh2 js-fullScreen"><i class="fa fa-arrows-alt" aria-hidden="true"></i></button>
             </div>
-            <button title="Mute" class="btn clrP clrBr btn-default clrSh2 openchatbtn js-openchat"><i class="fa fa-comments" aria-hidden="true"></i></button>
+            <button title="Chat" class="btn clrP clrBr btn-default clrSh2 openchatbtn js-openchat"><i class="fa fa-comments" aria-hidden="true"></i></button>
           </div>
           <div class="btnContainer top display">
             <div class="callingString hide">Calling</div>
