OP-155: Production configuration
* Grunt task for minification of javascript and css files
* Implement function to choose which files(minified or not) to provide
* Changes in package.json scripts

--- a/app/views/clientScreen.ejs
+++ b/app/views/clientScreen.ejs
@@ -5,6 +5,7 @@
     <title>Client Screen</title>
   </head>
   <body>
+  <!--Qmdi2eVodWwXLCFqtmDjVdn4YJgZeoMnAMXuM3hj4ZDp9n-->
     <button class="streamlyBtn" data-widget-store-name="Streamly provider" data-remote-store-name="Milko's store" data-listing-name="Test Listing" data-peer-id="QmQ4MM8shZteAgmGm8JG1h2eJw746VCNmaTnMzu3vkrTWS">Contact store</button>
     <script>
         // Load Streamly Widget
