OP-157: Ice restart functionality

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,11 +25,10 @@
             <div class="loadingScreen hide">
                 <div class="loadingScreen__container">
                     <div>
-<!--                        <img class="loadingScreen__image" src='../imgs/streamlyVectorIconNoText.svg'/>-->
+                        <img class="loadingScreen__image" src='../imgs/streamlyVectorIconNoText.png'/>
                         <div class="loadingScreen__text">Reconnecting</div>
                     </div>
                 </div>
-
             </div>
           </div>
           <div  id="localVideoContainer" class="display">
