OP-159: Configuration page changes

--- a/app/views/generator.ejs
+++ b/app/views/generator.ejs
@@ -10,8 +10,7 @@
     <div class="generatorContainer">
         <div>
             <div id="buttonInfo">
-              Your store name: <input type="text" name="widgetStore" id="widgetStore"><br>
-              Remote store name: <input type="text" name="remoteStore" id="remoteStore"><br>
+              Store name: <input type="text" name="remoteStore" id="remoteStore"><br>
               Listing name: <input type="text" name="listing" id="listing"><br>
               Store peer id: <input type="text" name="peerId" id="peerID"><br>
               <button class="js-generate">Get code</button>
