--- a/app/views/clientScreen.ejs
+++ b/app/views/clientScreen.ejs
@@ -11,7 +11,7 @@
         // Load Streamly Widget
         (function() {
             var tag = document.createElement('script');
-            tag.src = "http://localhost:8080/streamly/api/clientScreen.js";
+            tag.src = "http://localhost/streamly/api/clientScreen.js";
             var firstScriptTag = document.getElementsByTagName('script')[0];
             firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
         })();
