--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -15,12 +15,12 @@
   </head>
   <body>
       <div class="videoContainer__body display">
+      <div class="videoContainer__msgs hide">The call has been declined</div>
         <div class="flex gutterHLg">
           <div class="videoContainer" id="videoContainer">
             <div id="remoteContainer">
               <div class="callingScreen ">
                 <div class="callingScreen__name"></div>
-                <div class="callingScreen__image" style="ob.avatarURL"></div>
               </div>
             <div class="loadingScreen hide">
                 <div class="loadingScreen__container">
