--- a/app/views/generator.ejs
+++ b/app/views/generator.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Streamly widget generator</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/generator.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/generator.css">
 </head>
 <body>
     <div class="generatorContainer">
