--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <title>Streamly widget</title>
     <% if(prod) {%>
-    <link rel="stylesheet" type="text/css" href="out/css/main.min.css">
-    <link rel="stylesheet" type="text/css" href="out/css/clientScreen.min.css">
+    <link rel="stylesheet" type="text/css" href="/out/css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="/out/css/clientScreen.min.css">
     <% } else {%>
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/clientScreen.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/clientScreen.css">
     <% } %>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://use.fontawesome.com/bfc751953e.js"></script>
   </head>
   <body>
       <div class="videoContainer__body display">
-      <div class="videoContainer__msgs hide">The call has been declined</div>
+      <div class="videoContainer__msgs hide"></div>
         <div class="flex gutterHLg">
           <div class="videoContainer" id="videoContainer">
             <div id="remoteContainer">
@@ -71,7 +71,7 @@
       <script src='/out/js/main.min.js'></script>
     <% } else {%>
     <script src='/js/videoEvents.js'></script>
-    <script src='js/chatEvents.js'></script>
+    <script src='/js/chatEvents.js'></script>
     <script src='/js/main.js'></script>
     <% } %>
   </body>
