--- a/app/public/stylesheets/clientScreen.css
+++ b/app/public/stylesheets/clientScreen.css
@@ -1,7 +1,11 @@
+.integration__video-container--open{
+    overflow: hidden;
+}
 .integration__video-container {
-    position: relative;
+    position: fixed;
     padding-bottom: 480px;
-    margin: 55px auto 0 auto;
+    top: 55px;
+    left: calc(50vw - 360px);
     width: 720px;
     height: 0;
     overflow: hidden;
