--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -199,6 +199,9 @@ body{
   border-radius: 25px;
   outline: none;
 }
+.btn:focus{
+    outline: none;
+}
 .videoContainer__body .btnContainer .btn.red.btn-default {
   color: #fff;
   background-color: #d9534f;
