--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -15,7 +15,10 @@
   </head>
   <body>
       <div class="videoContainer__body display">
-      <div class="videoContainer__msgs hide"></div>
+      <div class="videoContainer__msgs hide">
+          <img class="videoContainer__msgs__logo" src="../imgs/streamlyVectorIconNoText.png" >
+          <div class="videoContainer__msgs__text"></div>
+      </div>
         <div class="flex gutterHLg">
           <div class="videoContainer" id="videoContainer">
             <div id="remoteContainer">
