--- a/app/public/stylesheets/clientScreen.css
+++ b/app/public/stylesheets/clientScreen.css
@@ -11,6 +11,10 @@
     overflow: hidden;
     border: 1px solid #dbdbdb;
 }
+.integration__video-container.display-msgs{
+    padding-bottom: 100px;
+    top: calc(50vh - 50px);
+}
 .integration__video-container iframe {
     position: absolute;
     top:0;
