--- a/app/public/stylesheets/clientScreen.css
+++ b/app/public/stylesheets/clientScreen.css
@@ -1,7 +1,7 @@
-.integration__video-container--open{
+.streamly.integration__video-container--open{
     overflow: hidden;
 }
-.integration__video-container {
+.streamly.integration__video-container {
     position: fixed;
     padding-bottom: 480px;
     top: 55px;
@@ -11,18 +11,18 @@
     overflow: hidden;
     border: 1px solid #dbdbdb;
 }
-.integration__video-container.display-msgs{
+.streamly.integration__video-container.display-msgs{
     padding-bottom: 100px;
     top: calc(50vh - 50px);
 }
-.integration__video-container iframe {
+.streamly.integration__video-container iframe {
     position: absolute;
     top:0;
     left: 0;
     width: 100%;
     height: 100%;
 }
-.integration__button{
+.streamly.integration__button{
     padding: 0 20px;
     line-height: 40px;
     font-size: 16px;
@@ -34,7 +34,7 @@
     text-transform:  uppercase;
     cursor: pointer;
 }
-.integration__overlay{
+.streamly.integration__overlay{
     background-color: rgba(0, 0, 0, 0.7);
     width: 100vw;
     height: 100vh;
@@ -42,6 +42,6 @@
     left: 0;
     position: fixed;
 }
-.hidden{
+.streamly.hidden{
     display: none;
 }
