OP-180: Fix first chat msg not shown in fullscreen

--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -260,6 +260,7 @@ body{
     bottom: calc(35px + 1%);
     margin-top: 1%;
     left: 2%;
+    top: 1%;
     width: 96%;
     max-height: calc(480px - (35px + 2%) );
 }
