OP-181: Fixed issue with horizontal chat scroll in Safari

--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -283,6 +283,7 @@ body{
     min-width: 35%;
     clear: both;
     overflow-wrap: break-word;
+    word-break: break-all;
 }
 .chatBubble:last-child{
     margin-top: 10px;
